--- a/ui/dashboard/notifications.reel/notification-details.reel/task-notification-details.reel/task-notification-details.html
+++ b/ui/dashboard/notifications.reel/notification-details.reel/task-notification-details.reel/task-notification-details.html
@@ -115,7 +115,7 @@
                 "value": "Cancel"
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "@owner.object.state != 'WAITING' && @owner.object.state != 'EXECUTING'"}
+                "classList.has('hide')": {"<-": "!@owner.object.abortable || (@owner.object.state != 'WAITING' && @owner.object.state != 'EXECUTING')"}
             }
         }
     }
