Better Fix for users/groups selector. Deal only with objects now.

--- a/blue-shark/ui/search.reel/search.html
+++ b/blue-shark/ui/search.reel/search.html
@@ -80,7 +80,7 @@
                 "allowMultiple": false
             },
             "bindings": {
-                "options": {"<-": "@owner._results.map{{label: this.path(@owner.labelPath), value: this.path(@owner.valuePath)}}"}
+                "options": {"<-": "@owner._results.map{{label: this.path(@owner.labelPath), value: this.path(@owner.labelPath)}}"}
             }
         },
 
