--- a/ui/sections/storage/inspectors/share.reel/afp-share.reel/afp-share.html
+++ b/ui/sections/storage/inspectors/share.reel/afp-share.reel/afp-share.html
@@ -50,8 +50,7 @@
             "properties": {
                 "element": {"#": "usersAllow"},
                 "label": "Users Allowed",
-                "emptyMessage": "No allowed users added",
-                "valuePath": "username"
+                "emptyMessage": "No allowed users added"
             },
             "bindings": {
                 "values": {"<->": "@owner.context.usersAllow"}
@@ -62,8 +61,7 @@
             "properties": {
                 "element": {"#": "usersDeny"},
                 "label": "Users Denied",
-                "emptyMessage": "No users denied",
-                "valuePath": "username"
+                "emptyMessage": "No users denied"
             },
             "bindings": {
                 "values": {"<->": "@owner.context.usersDeny"}
@@ -74,8 +72,7 @@
             "properties": {
                 "element": {"#": "groupsAllow"},
                 "label": "Groups Allowed",
-                "emptyMessage": "No allowed groups added",
-                "valuePath": "name"
+                "emptyMessage": "No allowed groups added"
             },
             "bindings": {
                 "values": {"<->": "@owner.context.groupsAllow"}
@@ -86,8 +83,7 @@
             "properties": {
                 "element": {"#": "groupsDeny"},
                 "label": "Groups Deny",
-                "emptyMessage": "No groups denied",
-                "valuePath": "name"
+                "emptyMessage": "No groups denied"
             },
             "bindings": {
                 "values": {"<->": "@owner.context.groupsDeny"}
