--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
@@ -144,7 +144,8 @@
                 "element": {"#": "permissions"}
             },
             "bindings": {
-                "object": {"<->": "@owner.object"},
+                "object": {"<-": "@owner.object"},
+                "context": {"<-": "@owner.context"},
                 "classList.has('hide')": {"<-": "@owner.object.type != 'FILESYSTEM'"}
             }
         },
