--- a/blue-shark/ui/search-multiple.reel/search-multiple.html
+++ b/blue-shark/ui/search-multiple.reel/search-multiple.html
@@ -80,7 +80,7 @@
                 "element": {"#": "select"}
             },
             "bindings": {
-                "options": {"<-": "@owner._results.map{{label: this.path(@owner.labelPath), value: this.path(@owner.valuePath)}}"}
+                "options": {"<-": "@owner._results.map{{label: this.path(@owner.labelPath), value: this.path(@owner.labelPath)}}"}
             }
         },
 
