--- a/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
+++ b/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
@@ -8,6 +8,9 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
+            }, 
+            "bindings": { 
+                "context.rsyncUser": {"<-": "@owner.object.0.user.{username: this}"}
             }
         },
         "mode": {
@@ -36,11 +39,10 @@
             "prototype": "ui/controls/search-users.reel",
             "properties": {
                 "element": {"#": "user"},
-                "label": "User",
-                "valuePath": "username"
+                "label": "User"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.0.user"}
+                "value": {"<->": "@owner.context.rsyncUser"}
             }
         },
         "path": {
