--- a/ui/sections/storage/inspectors/share.reel/share-permissions.reel/share-permissions.html
+++ b/ui/sections/storage/inspectors/share.reel/share-permissions.reel/share-permissions.html
@@ -6,6 +6,10 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
+            },
+            "bindings": {
+                "context.permissionsUser": {"<-": "@owner.object.permissions.user.{username: this}"},
+                "context.permissionsGroup": {"<-": "@owner.object.permissions.group.{name: this}"}
             }
         },
         "permissionsSection": {
@@ -30,11 +34,10 @@
             "properties": {
                 "element": {"#": "ownerUser"},
                 "label": "Owner user",
-                "valuePath": "username",
                 "hasNoneButton": false
             },
             "bindings": {
-                "value": {"<->": "@owner.object.permissions.user"}
+                "value": {"<->": "@owner.context.permissionsUser"}
             }
         },
         "ownerGroup": {
@@ -42,11 +45,10 @@
             "properties": {
                 "element": {"#": "ownerGroup"},
                 "label": "Owner group",
-                "valuePath": "name",
                 "hasNoneButton": false
             },
             "bindings": {
-                "value": {"<->": "@owner.object.permissions.group"}
+                "value": {"<->": "@owner.context.permissionsGroup"}
             }
         },
         "modes": {
